# 20250224jpmc-pm

./: .version.txt  backslash.py  card.py  carddeck.py  creating_classes.py  deco_fun.py  fun_with_attributes.py  fun_with_python.py  func_params.py  jokerdeck.py  logcall.py  president.py  simple_classes.py
DATA/: presidents.db  solar.json
EXAMPLES/: csv_read.py  csv_write.py  db_sqlite_add_row.py  db_sqlite_delete_row.py  db_sqlite_parameterized_many.py  globals_locals.py  inspect_ex.py  json_read.py  memorychecker.py  post_to_rest.py  rest_consumer_omdb.py  rest_consumer_omdb_sessions.py
EXAMPLES/flask_examples/: flask_hello.py  flask_hello_template.py  flask_presidents_template.py  flask_vars_and_filters.py
EXAMPLES/flask_examples/templates/: flask_hello.html  president_base.html  president_results.html  vars_and_filters.html
EXAMPLES/hamlib/src/: hamlib.py
EXAMPLES/spamlib/src/spamlib/: spam.py
EXAMPLES/tests/: pytest.ini  test_builtin_fixtures.py  test_mark.py  test_mock.py  test_parametrization.py  test_simple.py  test_special_assertions.py
TEMP/: chi_data.csv
cupcakes_project/: pyproject.toml
cupcakes_project/docs/source/: conf.py  index.rst
cupcakes_project/src/cupcakes/: __init__.py  auth.py  cupcakes.py  schema.sql
cupcakes_project/src/cupcakes/templates/: base.html
cupcakes_project/src/cupcakes/templates/cupcakes/: home.html  other.html
cupcakes_project/tests/: conftest.py  test_auth.py  test_cupcakes.py  test_db.py  test_factory.py
