[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# the above is required

[project]
name = "cupcakes"
version = "1.0.0"
authors = [
    { name="John Strickler", email="john.strickler@triveratech.com" },
]
description = "All about Cupcakes"
readme = "README.rst"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
   'Flask >= 3.0',
   'Werkzeug >= 3.0',
   'click >= 8.0',
]


